# project-installer

./: .gitignore  README.md  pyproject.toml
src/project_installer/: __init__.py  constants.py  errors.py  installer.py
